# WEB_HW_9

./: authors.json  config.ini  pyproject.toml
scrapy_version_hw_9/: scrapy.cfg
scrapy_version_hw_9/scrapy_version_hw_9/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_version_hw_9/scrapy_version_hw_9/spiders/: main_spider.py
web_hw_9/: db_connection.py  db_models.py  json_load_to_db.py
